# ChangeLog for dev-util/debootstrap
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.246 2014/02/08 15:00:54 jer Exp $

  08 Feb 2014; Jeroen Roovers <jer@gentoo.org> debootstrap-1.0.56.ebuild:
  Stable for HPPA (bug #500686).

*debootstrap-1.0.57 (08 Feb 2014)

  08 Feb 2014; Jeroen Roovers <jer@gentoo.org> +debootstrap-1.0.57.ebuild:
  Version bump.

  23 Jan 2014; Jeroen Roovers <jer@gentoo.org> debootstrap-1.0.55.ebuild:
  Stable for HPPA too.

  23 Jan 2014; Guy Martin <gmsoft@gentoo.org> debootstrap-1.0.56.ebuild:
  Marked ~hppa.

  19 Jan 2014; Jeroen Roovers <jer@gentoo.org> -debootstrap-1.0.52.ebuild,
  -debootstrap-1.0.53.ebuild:
  Old.

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.55.ebuild:
  Stable for alpha, wrt bug #491590

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.55.ebuild:
  Stable for ia64, wrt bug #491590

*debootstrap-1.0.56 (30 Dec 2013)

  30 Dec 2013; Jeroen Roovers <jer@gentoo.org> +debootstrap-1.0.56.ebuild:
  Version bump.

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.55.ebuild:
  Stable for sparc, wrt bug #491590

  22 Dec 2013; Pacho Ramos <pacho@gentoo.org> debootstrap-1.0.55.ebuild:
  amd64 stable, bug #491590

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.55.ebuild:
  Stable for ppc64, wrt bug #491590

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.55.ebuild:
  Stable for ppc, wrt bug #491590

  14 Dec 2013; Johannes Huber <johu@gentoo.org> debootstrap-1.0.55.ebuild:
  x86 stable, bug #491590

  30 Nov 2013; Markus Meier <maekke@gentoo.org> debootstrap-1.0.55.ebuild:
  arm stable, bug #491590

*debootstrap-1.0.55 (23 Oct 2013)

  23 Oct 2013; Jeroen Roovers <jer@gentoo.org> +debootstrap-1.0.55.ebuild:
  Version bump.

*debootstrap-1.0.53 (18 Jul 2013)

  18 Jul 2013; Jeroen Roovers <jer@gentoo.org> -debootstrap-1.0.46.ebuild,