@@ -4,16 +4,18 @@ Hash: SHA256
 DIST debootstrap_1.0.55.tar.gz 59024 SHA256 a0c4f8980df376470ab71687c43a41fe62a44b117c58a4b8d98a6177cfd5e33a SHA512 5d1672ee24bf8375987b8c54a093f24fb879d8b3c9f11d377097d90001d18e9d1acd155552eeb22b8f4d6361ba6b86bbc833822f27f12222f12bd4b757e1a786 WHIRLPOOL c81e2e5bb8130083887d738557e034a31553c7beea521dafd2f27ed31233effc60524e005266539fbf4043049a1dff55214ec7346366df265bbc81cd50c73aff
 DIST debootstrap_1.0.56.tar.gz 59501 SHA256 14b40be6cc807a2013ed05105325638bd56643cd289dfa91321d9d1d7a393e7b SHA512 831bd97cd8fe5338315d812c683055f3879ca55c653d565886faf3d17f2fc9462beecd05e923ea8a9ae713c0398e59c6a4affd9b557cf181c04bc2034641fbac WHIRLPOOL ab5eef9656fe24b335ed75ac99bcc4e45314b9ae9e440efb47f8114f7af3ec1ec114bd112871f801dc1553274b71015c9990bfb390b96e9d3ba86ec600e95068
 DIST debootstrap_1.0.57.tar.xz 49244 SHA256 94a9267b3490ac730157561f21a556ca12e7964c8276ede49125c942c0aa2f81 SHA512 dd678cf82e5575509dbb3639b7de8ea58dfe6c113ff21777e2f185999aa4574db5ba60a21417f580ac895e4bbbf1c46a19902acdc5d8633b42f3730238bea63e WHIRLPOOL eabc4d09bd2877a91f3420c8dcac68db98dfc8d374e17a4984248724cac6901d6af7ff6627fbed5da247975a5d0af53e434689e4532d2645585b38ee729fd2d7
+DIST debootstrap_1.0.58.tar.xz 49416 SHA256 2f051c46f0722104fd6f856d45f02df2f12e90b5137e5ee8034b49d2648e5e08 SHA512 9838f4e9d7a481f2fe3e9d1955f8edb2769fe71d46c9ca182badd54d848c0e230a1add048b1073c928fbbb33cba55d22a4721960d4503408f76aeb0a25f4447a WHIRLPOOL c40081e0024a52bc1416ab79e21d4cb7cc2a4190a1ceb3e7faf2078af732db95ef55184dba23adf121fe06c2b3782ab40e8128c8b8e221b07d0da17aa0da112a
 DIST devices.tar.gz 47835 SHA256 0d93f93c8b21160069d14e74f8f990a2e0e1e5a90dc828b29e6b3f5aa5829e48 SHA512 994ec8d72e3d52d2d872f7ff0da2336e4cbd3a5fa73bb6cdb9e06f5e7f5b8c69cea639c738fdba1186f382d6dcf62e7746fface664bfbd744aac24b16f034432 WHIRLPOOL 222963bb920e1311bc2f481bba04e49f386b60cce6ce0576424896277e0c4fc6a339d4403d587744c32b0bfb1db6391f200fa8d66117e3f21e1c12f35365d732
 EBUILD debootstrap-1.0.55.ebuild 1029 SHA256 66a4b938c6afda2763f30c304a2d4c77c4bd502c7c9ca63fef49ac04594c0453 SHA512 d509c372f27bb39348930fd7b944abd7c441bb78fda6eab30c0dd36ea13e9120567e11ea57f6e6d00eec492c134b2b629e7747d2834ea83b5305ed2c3578c2b2 WHIRLPOOL 3fd1b41c4f306432361db86565fa67683b81f70be15b20e9900d4bd51d98ba08d56720d205d4591213dc47f9bc477fe5f00d122d33086382577c72004c0e691f
 EBUILD debootstrap-1.0.56.ebuild 1036 SHA256 a6e9adcd44cfb261eb9e012058e97792f2b4e832c324ad6e6e42de6404b9c50d SHA512 75ad7c4b33ba98c86cd563382792456fa38cf5300ecf76930f3ea51206dac4b0153f6c5dca6709345178a8773b23574926e03d80b872a74ac8d6a17dfb205c05 WHIRLPOOL b24e7feb83688b900a1bc5bf7e36944f76b8400e885e7f05707aa929eff7580c54f1eba67e42f07c06e11a7bb0cc580b9eb37d1c2b2eb9b6e16f8c14c9f71093
 EBUILD debootstrap-1.0.57.ebuild 1067 SHA256 ac83bdd865a6b359bc19e7ef3340eaa8c1f07dcd3781a3a3f83705737eedc73a SHA512 c6fb2447ef91a99b3fa371b5943c3d1dd829d468f47926574828fb841036bedf89a6ff837867ed1229b005fbbd7478fb4b9a01641271d5d3f432b65129c34d5e WHIRLPOOL 47b4513848a9725ad24a9eef48f87d59e5872fb8d2b3fe76856e00e22919831efc88c49a6414e9e54fb6ede2954ed8c42a73f65b5fd8393ba953667c458eb7d9
-MISC ChangeLog 30769 SHA256 8d01b38b3064e71e451755b32e21ef09339a72556e4e332e05db208ef4de3e47 SHA512 867a0a2412dba5a2914b134d1ae6511f9165c044ebe9f4182d12b2e2b4e81e1065f15e54fc32c75b1487e98747ed48193ac6609dfa99dccf3a6dc021770504e5 WHIRLPOOL 39a53728cb8341ddeef6745f08ff8b2d9f4415c91a0e2634d8d450bd62e783fef89821bcbe375aabb57cd119c815ad80204195d66203aa2cd71cff38c5364490
+EBUILD debootstrap-1.0.58.ebuild 1067 SHA256 2762b5dd3582528c1e200164dae0a40fe9b58e22618bd395a8e25dd784524442 SHA512 9ffd3d7b9ee65630c8f56536c8937314bc916796a8fa4bd9d5a9ae80144f41f76f982cbea99f2f2c48f56d45c719b1a8f3129eadc5b7d80827b293bcbd1d451c WHIRLPOOL 968b53793a479f7f2113ed9d5c3d9bfbb89e3a0a0431b8448d80bcd5ca5f16a55914d55b49d24bc8830768e00b70d3cdfe68c47f28b4951acc6ec5194a66004f
+MISC ChangeLog 30896 SHA256 c655640f0406f8a4281188b700a43c18f9714da45706bbb10a1902e52873e671 SHA512 21b200015ac2ee928e412a120e974eb2a1e37dd8ffdf53fa94de6af723d3b6abdd4cc2d132ff9b7e1152ae2fe7087184324bc332f1d201d8a18b53ebe02e6c35 WHIRLPOOL 711cea817d61e1bf6cb43d1a64df49282dcad6cb730c68441d944d8d141087e98bf6cf626d146a43be117b86404dd197baad4d06ccb0e1752d2f50c7ecc319f4
 MISC metadata.xml 254 SHA256 2790aaa1752a64752fb0a90f28f292669aa359e1c1583ad3834746b55e86dbd2 SHA512 b8d3d7e0aaa35ea183b5b2978ed73ddaea52efe0f14ac2f45cbd64fd7d7a49383330ab3bf5f9777681df053584d5f392b6b6c22dbd778abfe39b8e0cc5915220 WHIRLPOOL 3403ae3dad61712af8ca7359fcb2124a509796fcc6a71d5a6c34cbc80ddcbdde48eddc03bbc559250b9bb818d2464b36143d17d98f21c6eacec34b6bda1ba048
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlL2RqcACgkQVWmRsqeSphM5xwCfRCqDgNBztmvHGFTb9M25D2P8
-z3AAnRDytEsTIeJ+nSxZVfISDnAH7PJt
-=JwX1
+iEYEAREIAAYFAlL6z6EACgkQVWmRsqeSphNG0QCfc+OwIsx9oxQLuZ1IJQADrvnK
+5PkAniBuMWFBXpR74P6w53jMhNj6yAis
+=Fa3E
 -----END PGP SIGNATURE-----
