@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install postinst unpack
+DEPEND=app-arch/xz-utils
+DESCRIPTION=Debian/Ubuntu bootstrap scripts
+EAPI=5
+HOMEPAGE=http://packages.qa.debian.org/d/debootstrap.html
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-linux ~x86-linux
+LICENSE=MIT
+RDEPEND=app-arch/dpkg net-misc/wget sys-devel/binutils
+SLOT=0
+SRC_URI=mirror://debian/pool/main/d/debootstrap/debootstrap_1.0.58.tar.xz mirror://gentoo/devices.tar.gz
+_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=530c542ff91f8229dbf3f743dcc5789b
